# NewsPulse

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yml  pyproject.toml
0Frontend/public/: index.html
0Frontend/src/: App.jsx  index.jsx
0Frontend/src/components/: NewsItem.jsx  NewsList.jsx
0Frontend/src/pages/: HomePage.jsx  StatsPage.jsx
0Frontend/src/services/: api.js
Backend/: Dockerfile  requirements.txt
Backend/apps/news/: admin.py  serializers.py
Backend/apps/news/models/: __init__.py  news.py  news_image.py
Backend/config/: urls.py
Frontend/: package-lock.json  package.json
Frontend/public/: index.html
Frontend/src/: App.jsx
Frontend/src/components/: Stats.jsx
Frontend/src/pages/: NewsByTagPage.jsx
apps/news/: admin.py  serializers.py  urls.py  views.py
apps/news/migrations/: 0001_initial.py  0002_news_slug_news_news_news_slug_915ecd_idx_and_more.py  0003_news_featured_image.py  0004_alter_news_options_news_status_and_more.py
apps/news/models/: news.py  news_image.py  tags.py
config/: settings.py  urls.py
