[project]
name = "NewsPulse"
version = "0.1.0"
description = ""
authors = [
    {name = "Samuel Nkopuruk",email = "samueleffiong80@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.1.7,<6.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "flake8 (>=7.1.2,<8.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-django (>=4.10.0,<5.0.0)",
    "coverage (>=7.6.12,<8.0.0)",
    "django-debug-toolbar (>=5.0.1,<6.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "whitenoise (>=6.9.0,<7.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "django-extensions (>=3.2.3,<4.0.0)",
    "django-filter (>=25.1,<26.0)",
    "djangorestframework-yaml (>=2.0.0,<3.0.0)",
    "rest-framework-simplejwt (>=0.0.2,<0.0.3)",
    "djangorestframework-xml (>=2.0.0,<3.0.0)",
    "djangorestframework-simplejwt (>=5.5.0,<6.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "pre-commit-hooks (>=5.0.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
pytest = "^8.3.5"
